2001-03-15  Jeff Freedman  <jeff@amy.nerble.net>

	* SFX's:  Those from Usecode intrinsics now have volume, L-R
	stereo position set depending on audio source's location.

2001-03-13  Jeff Freedman  <jeff@amy.nerble.net>

	* SFX's:  Wave file spec. moved to game section in .exult.cfg.
	* Bird sounds added.
	* Adding support for volume change in SFX being played.

2001-03-13  Ryan Nunn <triforce@merlin.net.au>
	* gamewin.cc: Game only attempt to detect Black Gate Actor gumps if
	  the game is actually Black Gate.
	* gumps/Gump.cc, objs/contain.cc: Added Tree Gump
	* sigame.cc: Added some more gump shape nums
	* audio/xmidi.*: Changes reverb and chorusing config keys to
	  config/audio/midi/reverb/level and config/audio/midi/chorus/level
	  Added two new options
	  config/audio/midi/reverb/enabled and config/audio/midi/chorus/enabled
	  so reverb and chorus can be enabled/disabled. Default is "no".
	* audio/midi_drivers/win_midiout.*: Set reverb and chorus defaults to 0.

2001-03-12  Jeff Freedman  <jeff@amy.nerble.net>

	* Timidity - Fixed bug that Willem Jan figured out.

2001-03-12  Wilem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.*: added new art to dependencies
	* Makefile.cygwin, files/utils.cc, cheat_screen.cc, configure.in: updated for Cygwin

2001-03-12  Max Horn  <max@quendi.de>
	* docs/faq/: added directory
	* docs/faq/exult_faq.xml: actual FAQ source (thanks to Dominik Reichardt!)
	* docs/faq/faqs.dtd: DTD for the FAQ
	* docs/faq/faq_html.xsl: XSL file to translate the XML FAQ to HTML
	* docs/faq/faq_text.xsl: XSL file to translate the XML FAQ to text. Not yet working correctly.

2001-03-11  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/cleaver.shp: more art from Adam Delman.
	* data/flx.in, Paperdoll_gump_info.cc, data/Makefile.am: added cleaver
	* data/gorget.shp, data/magicgorget.shp: updated

2001-03-11  Jeff Freedman  <jeff@amy.nerble.net>

	* Digital sound effects (from .wav's in a Flex file).
