@@ -31,3 +31,4 @@ great_dagger.shp
 gorget.shp
 magicgorget.shp
 cleaver.shp
+faces.shp
